# az-scout-plugin-avs-rvtools-analyser

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/az_scout_avs_rvtools_analyser/: __init__.py  _log.py  risk_analysis.py  routes.py  statistics.py  tools.py
src/az_scout_avs_rvtools_analyser/static/css/: avs-rvtools-analyser.css
src/az_scout_avs_rvtools_analyser/static/html/: avs-rvtools-analyser-tab.html
src/az_scout_avs_rvtools_analyser/static/js/: avs-rvtools-analyser-tab.js
tests/: __init__.py  test_risk_analysis.py  test_routes.py  test_statistics.py  test_tools.py
tools/: create_test_data.py
